JEDIT 4.4 VERSION HISTORY

{{{ Version 4.4pre1

Thanks to Björn "Vampire" Kautler, Alan Ezust, Eric Berry, Shlomy Reinstein,
Damien Radtke, Eric Le Lay and Bernhard Walle for contributing to this release.

{{{ Bug fixes

- Fix # 2921611 - PluginSets fail to load grand-dependencies. (Damien Radtke)

- Fix # 2920287 - Macro recording for home/end actions fixed. (Alan Ezust)

- Fixed some quirks in the Python edit mode (Björn "Vampire" Kautler)

- fix #1439605 - remove installer.VariableGridLayout (r16596).

- Added the missing doxygen commands for doxygen v1.6.1
  (bug #2895272 - report and patch from Bernhard Walle).
  doxygen now highlights quoted strings in comments.

- Fixed bug in "selection-length" status bar widget: The widget was not added
  to the edit bus, so it wasn't updated when the edit pane changed.
  (Shlomy Reinstein)

- Fixed #2920352: Can't disable "Restore previously open files on startup".
  (Shlomy Reinstein)

}}}
{{{ API changes

- Added a method for unregistering macro handlers: Macros.unregisterHandler().

}}}
{{{ Miscellaneous

- Added a configurable selection foreground color. If set, this color will be
  used for the selection foreground instead of the syntax highlighting color.
  The new option can be set from Global Options -> Text Area.
  (Shlomy Reinstein)

}}}
}}}
